Page settings: fixed width of content area on mobile

--- a/src/css/boom/page/settings.less
+++ b/src/css/boom/page/settings.less
@@ -269,7 +269,7 @@
 		}
 
 		.b-page-settings-content {
-			max-width: calc(~"100% - 10rem");
+			max-width: calc(~"100% - 16rem");
 			transition: max-width 0.5s;
 		}
 	}
